# resource_pool

./: .travis.yml  CMakeLists.txt  README.md
examples/async/: pool.cc
include/yamail/resource_pool/: handle.hpp
include/yamail/resource_pool/async/: pool.hpp
include/yamail/resource_pool/async/detail/: pool_impl.hpp  queue.hpp
tests/: handle.cc
tests/async/: queue.cc
